--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="window-notice" id="window-notice">
         <div class="content">
             <div class="content-text">Este sitio utiliza cookies para obtener la mejor experiencia en nuestra web. 
-            <a href="#">Leer más.</a></div>
+            <a href="LICENSE">Leer más.</a></div>
             <div class="content-buttons"><a href="#" id="close-button">Aceptar</a></div>
         </div>
     </div>
